objects/Job_Application__c.object
<CustomObject>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Candidate__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cover_Letter__c</fullName>
        <label>Cover Letter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Position</label>
        <referenceTo>Position__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Extend an Offer</fullName>
                </value>
                <value>
                    <fullName>Hired</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Phone Screen</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Review Resume</fullName>
                </value>
                <value>
                    <fullName>Schedule Interviews</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Rating__c</fullName>
        <label>Total Rating</label>
        <summarizedField>Review__c.Rating__c</summarizedField>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Job Application</label>
    <nameField>
        <displayFormat>JA-{0000}</displayFormat>
        <label>Job Application No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>